Added prisma query and mutation hooks
